--- a/eda.ipynb
+++ b/eda.ipynb
@@ -1,15 +1,57 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "# EDA (Exploratory Data Analysis)\n",
+    "* Dataset from the [CanYouReadIt?](https://canyoureadit.com) project\n",
+    "* The survey was conducted starting from **/4/20/2021.** This is an ongoing survey, but the current data has been exported from the online database at **1/8/2022.**\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pandas version: 1.3.4 found!\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    import pandas as pd\n",
+    "    print(f\"Pandas version: {pd.__version__} found!\")\n",
+    "except ModuleNotFoundError:\n",
+    "    print(\"Install Pandas with: conda install pandas\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
