importing libraries needed for eda

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -23,7 +23,26 @@
     "    import pandas as pd\n",
     "    print(f\"Pandas version: {pd.__version__} found!\")\n",
     "except ModuleNotFoundError:\n",
-    "    print(\"Install Pandas with: conda install pandas\")"
+    "    print(\"Install Pandas with: conda install pandas\")\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.dates as mdates\n",
+    "import matplotlib.cbook as cbook\n",
+    "import datetime as dt\n",
+    "import matplotlib.font_manager\n",
+    "FONT_SIZE = 24\n",
+    "plt.rcParams['font.family'] = 'Helvetica'\n",
+    "plt.rcParams['figure.figsize'] = (20,8)\n",
+    "plt.rcParams['grid.color'] = '#333333'\n",
+    "plt.rcParams['grid.linestyle'] = 'dotted'\n",
+    "plt.rcParams['grid.linewidth'] = 1\n",
+    "plt.rcParams['text.usetex'] = True\n",
+    "plt.rcParams['font.size'] = FONT_SIZE\n",
+    "plt.rcParams['legend.fontsize'] = FONT_SIZE\n",
+    "plt.rcParams['xtick.labelsize'] = FONT_SIZE\n",
+    "plt.rcParams['ytick.labelsize'] = FONT_SIZE\n",
+    "%config InlineBackend.figure_format ='retina'"
    ],
    "metadata": {
     "collapsed": false,
