factorization of session ids is done

--- a/data_transformation.ipynb
+++ b/data_transformation.ipynb
@@ -319,6 +319,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Empty DataFrame\nColumns: [image_id, response, create_dt, session_id, mobile_user, mobile_image]\nIndex: []",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>image_id</th>\n      <th>response</th>\n      <th>create_dt</th>\n      <th>session_id</th>\n      <th>mobile_user</th>\n      <th>mobile_image</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drop(df[(df['mobile_user'] == False) & (df['mobile_image']== True)].index, inplace=True)\n",
+    "df[(df['mobile_user'] == False) & (df['mobile_image']== True)]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       image_id  response           create_dt  \\\n0             6         1 2021-04-20 20:23:08   \n1             4         1 2021-04-21 11:33:17   \n2             9         1 2021-04-21 11:33:19   \n3             5         1 2021-04-21 12:42:57   \n4            11         1 2021-04-21 12:43:07   \n...         ...       ...                 ...   \n9456        384        -1 2022-01-08 00:36:32   \n9457         92        -1 2022-01-08 00:42:51   \n24596       452        -1 2022-01-08 00:42:56   \n24597       513        -1 2022-01-08 00:52:31   \n24598       523         1 2022-01-08 01:02:24   \n\n                                 session_id  mobile_user  mobile_image  \n0      c9e86836-ad35-4e16-a4f7-8b273b496570        False         False  \n1      cc681fa6-f357-4b9c-a268-a986ac9960f1        False         False  \n2      cc681fa6-f357-4b9c-a268-a986ac9960f1        False         False  \n3      cc681fa6-f357-4b9c-a268-a986ac9960f1        False         False  \n4      cc681fa6-f357-4b9c-a268-a986ac9960f1        False         False  \n...                                     ...          ...           ...  \n9456   50493768-4aa3-402e-a84e-747b08122f72         True          True  \n9457   9720ea8b-0080-4649-8280-773aecd9f067         True          True  \n24596  a157c0d8-5cb2-4d07-a020-f0171cf71912        False         False  \n24597  22b6e654-a93a-49aa-9798-3b44f1257364        False         False  \n24598  70c85bd3-381c-44d4-9eb3-9eb25ba38f48        False         False  \n\n[34053 rows x 6 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>image_id</th>\n      <th>response</th>\n      <th>create_dt</th>\n      <th>session_id</th>\n      <th>mobile_user</th>\n      <th>mobile_image</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>6</td>\n      <td>1</td>\n      <td>2021-04-20 20:23:08</td>\n      <td>c9e86836-ad35-4e16-a4f7-8b273b496570</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4</td>\n      <td>1</td>\n      <td>2021-04-21 11:33:17</td>\n      <td>cc681fa6-f357-4b9c-a268-a986ac9960f1</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>9</td>\n      <td>1</td>\n      <td>2021-04-21 11:33:19</td>\n      <td>cc681fa6-f357-4b9c-a268-a986ac9960f1</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5</td>\n      <td>1</td>\n      <td>2021-04-21 12:42:57</td>\n      <td>cc681fa6-f357-4b9c-a268-a986ac9960f1</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>11</td>\n      <td>1</td>\n      <td>2021-04-21 12:43:07</td>\n      <td>cc681fa6-f357-4b9c-a268-a986ac9960f1</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>9456</th>\n      <td>384</td>\n      <td>-1</td>\n      <td>2022-01-08 00:36:32</td>\n      <td>50493768-4aa3-402e-a84e-747b08122f72</td>\n      <td>True</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>9457</th>\n      <td>92</td>\n      <td>-1</td>\n      <td>2022-01-08 00:42:51</td>\n      <td>9720ea8b-0080-4649-8280-773aecd9f067</td>\n      <td>True</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>24596</th>\n      <td>452</td>\n      <td>-1</td>\n      <td>2022-01-08 00:42:56</td>\n      <td>a157c0d8-5cb2-4d07-a020-f0171cf71912</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>24597</th>\n      <td>513</td>\n      <td>-1</td>\n      <td>2022-01-08 00:52:31</td>\n      <td>22b6e654-a93a-49aa-9798-3b44f1257364</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>24598</th>\n      <td>523</td>\n      <td>1</td>\n      <td>2022-01-08 01:02:24</td>\n      <td>70c85bd3-381c-44d4-9eb3-9eb25ba38f48</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n<p>34053 rows × 6 columns</p>\n</div>"
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique sessions: 29648\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['session_id'] = pd.factorize(df['session_id'])[0]\n",
+    "print('Number of unique sessions:',len(df['session_id'].unique()))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
