Data Transformation complete, result csv saved

--- a/data_transformation.ipynb
+++ b/data_transformation.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -57,7 +57,10 @@
     "TIMESTAMP = '202201080305'\n",
     "IMAGES = r'data/images_'+TIMESTAMP+'.csv'\n",
     "DESKTOP = r'data/response_desktop_'+TIMESTAMP+'.csv'\n",
-    "MOBILE = r'data/response_mobile_'+TIMESTAMP+'.csv'"
+    "MOBILE = r'data/response_mobile_'+TIMESTAMP+'.csv'\n",
+    "SAVEPATH = r'data/canyoureadit.csv'\n",
+    "G = '\\033[92m' # green\n",
+    "E = '\\033[0m' # end formatting"
    ]
   },
   {
@@ -432,10 +435,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Save the results to a single .csv in data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
-   "outputs": [],
-   "source": [],
+   "execution_count": 20,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[92mResults saved to: data/canyoureadit.csv\u001B[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.to_csv(SAVEPATH, sep=',')\n",
+    "print(f\"{G}Results saved to: {SAVEPATH}{E}\")"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
