--- a/eda.ipynb
+++ b/eda.ipynb
@@ -50,6 +50,22 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "SAVEPATH = r'data/canyoureadit.csv'\n",
+    "G = '\\033[92m' # green\n",
+    "E = '\\033[0m' # end formatting"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
