--- a/data_transformation.ipynb
+++ b/data_transformation.ipynb
@@ -40,32 +40,13 @@
     "    print(f\"Pandas version: {pd.__version__} found!\")\n",
     "except ModuleNotFoundError:\n",
     "    print(\"Install Pandas with: conda install pandas\")\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from constants import (TIMESTAMP, IMAGES, DESKTOP, MOBILE, SAVEPATH, T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "TIMESTAMP = '202201080305'\n",
-    "IMAGES = r'data/images_'+TIMESTAMP+'.csv'\n",
-    "DESKTOP = r'data/response_desktop_'+TIMESTAMP+'.csv'\n",
-    "MOBILE = r'data/response_mobile_'+TIMESTAMP+'.csv'\n",
-    "SAVEPATH = r'data/canyoureadit.csv'\n",
-    "G = '\\033[92m' # green\n",
-    "E = '\\033[0m' # end formatting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -104,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -143,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -156,7 +137,7 @@
       "text/plain": "       image_id  response           create_dt  \\\n0             6         1 2021-04-20 20:23:08   \n1             4         1 2021-04-21 11:33:17   \n2             9         1 2021-04-21 11:33:19   \n3             5         1 2021-04-21 12:42:57   \n4            11         1 2021-04-21 12:43:07   \n...         ...       ...                 ...   \n9456        384        -1 2022-01-08 00:36:32   \n9457         92        -1 2022-01-08 00:42:51   \n24596       452        -1 2022-01-08 00:42:56   \n24597       513        -1 2022-01-08 00:52:31   \n24598       523         1 2022-01-08 01:02:24   \n\n                                 session_id  mobile_user  \n0      c9e86836-ad35-4e16-a4f7-8b273b496570        False  \n1      cc681fa6-f357-4b9c-a268-a986ac9960f1        False  \n2      cc681fa6-f357-4b9c-a268-a986ac9960f1        False  \n3      cc681fa6-f357-4b9c-a268-a986ac9960f1        False  \n4      cc681fa6-f357-4b9c-a268-a986ac9960f1        False  \n...                                     ...          ...  \n9456   50493768-4aa3-402e-a84e-747b08122f72         True  \n9457   9720ea8b-0080-4649-8280-773aecd9f067         True  \n24596  a157c0d8-5cb2-4d07-a020-f0171cf71912        False  \n24597  22b6e654-a93a-49aa-9798-3b44f1257364        False  \n24598  70c85bd3-381c-44d4-9eb3-9eb25ba38f48        False  \n\n[34057 rows x 5 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>image_id</th>\n      <th>response</th>\n      <th>create_dt</th>\n      <th>session_id</th>\n      <th>mobile_user</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>6</td>\n      <td>1</td>\n      <td>2021-04-20 20:23:08</td>\n      <td>c9e86836-ad35-4e16-a4f7-8b273b496570</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4</td>\n      <td>1</td>\n      <td>2021-04-21 11:33:17</td>\n      <td>cc681fa6-f357-4b9c-a268-a986ac9960f1</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>9</td>\n      <td>1</td>\n      <td>2021-04-21 11:33:19</td>\n      <td>cc681fa6-f357-4b9c-a268-a986ac9960f1</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5</td>\n      <td>1</td>\n      <td>2021-04-21 12:42:57</td>\n      <td>cc681fa6-f357-4b9c-a268-a986ac9960f1</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>11</td>\n      <td>1</td>\n      <td>2021-04-21 12:43:07</td>\n      <td>cc681fa6-f357-4b9c-a268-a986ac9960f1</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>9456</th>\n      <td>384</td>\n      <td>-1</td>\n      <td>2022-01-08 00:36:32</td>\n      <td>50493768-4aa3-402e-a84e-747b08122f72</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>9457</th>\n      <td>92</td>\n      <td>-1</td>\n      <td>2022-01-08 00:42:51</td>\n      <td>9720ea8b-0080-4649-8280-773aecd9f067</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>24596</th>\n      <td>452</td>\n      <td>-1</td>\n      <td>2022-01-08 00:42:56</td>\n      <td>a157c0d8-5cb2-4d07-a020-f0171cf71912</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>24597</th>\n      <td>513</td>\n      <td>-1</td>\n      <td>2022-01-08 00:52:31</td>\n      <td>22b6e654-a93a-49aa-9798-3b44f1257364</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>24598</th>\n      <td>523</td>\n      <td>1</td>\n      <td>2022-01-08 01:02:24</td>\n      <td>70c85bd3-381c-44d4-9eb3-9eb25ba38f48</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n<p>34057 rows × 5 columns</p>\n</div>"
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -203,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -225,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -239,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -254,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -267,7 +248,7 @@
       "text/plain": "      image_id  response           create_dt  \\\n0           11        -1 2021-04-21 19:45:05   \n1            8         1 2021-04-22 08:06:01   \n2            9         1 2021-04-22 10:04:21   \n3           11         0 2021-04-22 10:06:49   \n4           10         1 2021-04-23 12:32:05   \n...        ...       ...                 ...   \n9397       418        -1 2022-01-07 10:14:27   \n9399       259        -1 2022-01-07 11:42:47   \n9409       483         1 2022-01-07 13:59:28   \n9449       549         1 2022-01-07 23:42:50   \n9451       265         1 2022-01-07 23:44:26   \n\n                                session_id  mobile_user  mobile_image  \n0     9ae1dc88-c633-4ed7-9a3e-9e55ac11d554         True         False  \n1     66924c76-e246-4fd4-9342-e5ab2b83df6e         True         False  \n2     9ae1dc88-c633-4ed7-9a3e-9e55ac11d554         True         False  \n3     9ae1dc88-c633-4ed7-9a3e-9e55ac11d554         True         False  \n4     54db6e88-9735-43c3-9575-25146e96ce31         True         False  \n...                                    ...          ...           ...  \n9397  adf86777-fcca-451f-a6c5-141598821a50         True         False  \n9399  5845bd0d-434e-4187-8bb3-dfb64390e8fc         True         False  \n9409  0dfe822b-d7aa-4799-8894-cd7d6aefb893         True         False  \n9449  f54bfeb7-cb10-4b4a-979d-1da79ffdac55         True         False  \n9451  521583c0-7e8f-422f-804d-df1e6f44db8e         True         False  \n\n[327 rows x 6 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>image_id</th>\n      <th>response</th>\n      <th>create_dt</th>\n      <th>session_id</th>\n      <th>mobile_user</th>\n      <th>mobile_image</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>11</td>\n      <td>-1</td>\n      <td>2021-04-21 19:45:05</td>\n      <td>9ae1dc88-c633-4ed7-9a3e-9e55ac11d554</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>8</td>\n      <td>1</td>\n      <td>2021-04-22 08:06:01</td>\n      <td>66924c76-e246-4fd4-9342-e5ab2b83df6e</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>9</td>\n      <td>1</td>\n      <td>2021-04-22 10:04:21</td>\n      <td>9ae1dc88-c633-4ed7-9a3e-9e55ac11d554</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>11</td>\n      <td>0</td>\n      <td>2021-04-22 10:06:49</td>\n      <td>9ae1dc88-c633-4ed7-9a3e-9e55ac11d554</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>10</td>\n      <td>1</td>\n      <td>2021-04-23 12:32:05</td>\n      <td>54db6e88-9735-43c3-9575-25146e96ce31</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>9397</th>\n      <td>418</td>\n      <td>-1</td>\n      <td>2022-01-07 10:14:27</td>\n      <td>adf86777-fcca-451f-a6c5-141598821a50</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>9399</th>\n      <td>259</td>\n      <td>-1</td>\n      <td>2022-01-07 11:42:47</td>\n      <td>5845bd0d-434e-4187-8bb3-dfb64390e8fc</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>9409</th>\n      <td>483</td>\n      <td>1</td>\n      <td>2022-01-07 13:59:28</td>\n      <td>0dfe822b-d7aa-4799-8894-cd7d6aefb893</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>9449</th>\n      <td>549</td>\n      <td>1</td>\n      <td>2022-01-07 23:42:50</td>\n      <td>f54bfeb7-cb10-4b4a-979d-1da79ffdac55</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>9451</th>\n      <td>265</td>\n      <td>1</td>\n      <td>2022-01-07 23:44:26</td>\n      <td>521583c0-7e8f-422f-804d-df1e6f44db8e</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n<p>327 rows × 6 columns</p>\n</div>"
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -291,7 +272,7 @@
       "text/plain": "     image_id  response           create_dt  \\\n71         32         1 2021-04-26 13:30:23   \n161        93         1 2021-04-28 15:34:32   \n\n                               session_id  mobile_user  mobile_image  \n71   cc681fa6-f357-4b9c-a268-a986ac9960f1        False          True  \n161  9ae1dc88-c633-4ed7-9a3e-9e55ac11d554        False          True  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>image_id</th>\n      <th>response</th>\n      <th>create_dt</th>\n      <th>session_id</th>\n      <th>mobile_user</th>\n      <th>mobile_image</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>71</th>\n      <td>32</td>\n      <td>1</td>\n      <td>2021-04-26 13:30:23</td>\n      <td>cc681fa6-f357-4b9c-a268-a986ac9960f1</td>\n      <td>False</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>161</th>\n      <td>93</td>\n      <td>1</td>\n      <td>2021-04-28 15:34:32</td>\n      <td>9ae1dc88-c633-4ed7-9a3e-9e55ac11d554</td>\n      <td>False</td>\n      <td>True</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -353,7 +334,7 @@
     "df['session_id'] = pd.factorize(df['session_id'])[0]\n",
     "print('Number of unique sessions:',len(df['session_id'].unique()))"
    ],
-   "execution_count": 13,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -379,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "errormessage = '''We expect to have answers of either -1, 0 or 1.\n",
@@ -395,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "df['response_yes'] = np.where(df['response'] == 1, True, False)\n",
@@ -411,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -424,7 +405,7 @@
       "text/plain": "       image_id           create_dt  session_id  mobile_user  mobile_image  \\\n0             6 2021-04-20 20:23:08           0        False         False   \n1             4 2021-04-21 11:33:17           1        False         False   \n2             9 2021-04-21 11:33:19           1        False         False   \n3             5 2021-04-21 12:42:57           1        False         False   \n4            11 2021-04-21 12:43:07           1        False         False   \n...         ...                 ...         ...          ...           ...   \n9456        384 2022-01-08 00:36:32       29643         True          True   \n9457         92 2022-01-08 00:42:51       29644         True          True   \n24596       452 2022-01-08 00:42:56       29645        False         False   \n24597       513 2022-01-08 00:52:31       29646        False         False   \n24598       523 2022-01-08 01:02:24       29647        False         False   \n\n       response_yes  response_no  response_skip  \n0              True        False          False  \n1              True        False          False  \n2              True        False          False  \n3              True        False          False  \n4              True        False          False  \n...             ...          ...            ...  \n9456          False        False           True  \n9457          False        False           True  \n24596         False        False           True  \n24597         False        False           True  \n24598          True        False          False  \n\n[34053 rows x 8 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>image_id</th>\n      <th>create_dt</th>\n      <th>session_id</th>\n      <th>mobile_user</th>\n      <th>mobile_image</th>\n      <th>response_yes</th>\n      <th>response_no</th>\n      <th>response_skip</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>6</td>\n      <td>2021-04-20 20:23:08</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4</td>\n      <td>2021-04-21 11:33:17</td>\n      <td>1</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>9</td>\n      <td>2021-04-21 11:33:19</td>\n      <td>1</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5</td>\n      <td>2021-04-21 12:42:57</td>\n      <td>1</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>11</td>\n      <td>2021-04-21 12:43:07</td>\n      <td>1</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>9456</th>\n      <td>384</td>\n      <td>2022-01-08 00:36:32</td>\n      <td>29643</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>9457</th>\n      <td>92</td>\n      <td>2022-01-08 00:42:51</td>\n      <td>29644</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>24596</th>\n      <td>452</td>\n      <td>2022-01-08 00:42:56</td>\n      <td>29645</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>24597</th>\n      <td>513</td>\n      <td>2022-01-08 00:52:31</td>\n      <td>29646</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>24598</th>\n      <td>523</td>\n      <td>2022-01-08 01:02:24</td>\n      <td>29647</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n<p>34053 rows × 8 columns</p>\n</div>"
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -460,7 +441,7 @@
    ],
    "source": [
     "df.to_csv(SAVEPATH, sep=',')\n",
-    "print(f\"{G}Results saved to: {SAVEPATH}{E}\")"
+    "print(f\"{T.G}Results saved to: {SAVEPATH}{T.E}\")"
    ],
    "metadata": {
     "collapsed": false,
