--- a/eda.ipynb
+++ b/eda.ipynb
@@ -403,8 +403,20 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Images viewed per day"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
