EDA: images per month instead of per day

--- a/data_transformation.ipynb
+++ b/data_transformation.ipynb
@@ -362,6 +362,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       image_id  response           create_dt  session_id  mobile_user  \\\n25201       246        -2 2022-01-15 01:29:48       30873        False   \n25202       246        -2 2022-01-15 01:29:48       30874        False   \n25203       246        -2 2022-01-15 01:29:50       30875        False   \n25204       246        -2 2022-01-15 01:29:50       30876        False   \n25207       246        -2 2022-01-15 01:47:28       30881        False   \n25208       246        -2 2022-01-15 01:47:30       30882        False   \n34813       298        -2 2022-03-24 13:05:38       45103        False   \n\n       mobile_image  \n25201         False  \n25202         False  \n25203         False  \n25204         False  \n25207         False  \n25208         False  \n34813         False  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>image_id</th>\n      <th>response</th>\n      <th>create_dt</th>\n      <th>session_id</th>\n      <th>mobile_user</th>\n      <th>mobile_image</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>25201</th>\n      <td>246</td>\n      <td>-2</td>\n      <td>2022-01-15 01:29:48</td>\n      <td>30873</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>25202</th>\n      <td>246</td>\n      <td>-2</td>\n      <td>2022-01-15 01:29:48</td>\n      <td>30874</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>25203</th>\n      <td>246</td>\n      <td>-2</td>\n      <td>2022-01-15 01:29:50</td>\n      <td>30875</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>25204</th>\n      <td>246</td>\n      <td>-2</td>\n      <td>2022-01-15 01:29:50</td>\n      <td>30876</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>25207</th>\n      <td>246</td>\n      <td>-2</td>\n      <td>2022-01-15 01:47:28</td>\n      <td>30881</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>25208</th>\n      <td>246</td>\n      <td>-2</td>\n      <td>2022-01-15 01:47:30</td>\n      <td>30882</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>34813</th>\n      <td>298</td>\n      <td>-2</td>\n      <td>2022-03-24 13:05:38</td>\n      <td>45103</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['response'] < -1]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "outputs": [],
    "source": [
