--- a/eda.ipynb
+++ b/eda.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -115,14 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
       "text/plain": "       image_id           create_dt  session_id  mobile_user  mobile_image  \\\n0             6 2021-04-20 20:23:08           0        False         False   \n1             4 2021-04-21 11:33:17           1        False         False   \n2             9 2021-04-21 11:33:19           1        False         False   \n3             5 2021-04-21 12:42:57           1        False         False   \n4            11 2021-04-21 12:43:07           1        False         False   \n...         ...                 ...         ...          ...           ...   \n35593       341 2022-04-07 16:12:55       46678        False         False   \n35594       412 2022-04-07 16:13:06       46678        False         False   \n35595       475 2022-04-07 16:13:10       46678        False         False   \n35596       226 2022-04-07 16:13:49       46679        False         False   \n35597       480 2022-04-07 16:13:53       46679        False         False   \n\n       response_yes  response_no  response_skip  \n0              True        False          False  \n1              True        False          False  \n2              True        False          False  \n3              True        False          False  \n4              True        False          False  \n...             ...          ...            ...  \n35593          True        False          False  \n35594          True        False          False  \n35595          True        False          False  \n35596          True        False          False  \n35597          True        False          False  \n\n[51160 rows x 8 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>image_id</th>\n      <th>create_dt</th>\n      <th>session_id</th>\n      <th>mobile_user</th>\n      <th>mobile_image</th>\n      <th>response_yes</th>\n      <th>response_no</th>\n      <th>response_skip</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>6</td>\n      <td>2021-04-20 20:23:08</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4</td>\n      <td>2021-04-21 11:33:17</td>\n      <td>1</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>9</td>\n      <td>2021-04-21 11:33:19</td>\n      <td>1</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5</td>\n      <td>2021-04-21 12:42:57</td>\n      <td>1</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>11</td>\n      <td>2021-04-21 12:43:07</td>\n      <td>1</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>35593</th>\n      <td>341</td>\n      <td>2022-04-07 16:12:55</td>\n      <td>46678</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>35594</th>\n      <td>412</td>\n      <td>2022-04-07 16:13:06</td>\n      <td>46678</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>35595</th>\n      <td>475</td>\n      <td>2022-04-07 16:13:10</td>\n      <td>46678</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>35596</th>\n      <td>226</td>\n      <td>2022-04-07 16:13:49</td>\n      <td>46679</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>35597</th>\n      <td>480</td>\n      <td>2022-04-07 16:13:53</td>\n      <td>46679</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n<p>51160 rows × 8 columns</p>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "def n_or_less_viewed(v, first_n = 10, verbose = False):\n",
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "outputs": [
     {
      "data": {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "outputs": [
     {
      "data": {
@@ -496,8 +496,8 @@
     "for label in (ax.get_xticklabels() + ax.get_yticklabels()):\n",
     "    label.set_fontsize(16)\n",
     "ax.set_title(f'Number of images viewed per month in the observed period (4/20/2021 - {ENDTIME})', fontsize=16)\n",
-    "plt.savefig(EXPORTDIR+'images_viewed_per_day.png',dpi=300)\n",
-    "plt.savefig(EXPORTDIR+'images_viewed_per_day.pdf')\n",
+    "plt.savefig(EXPORTDIR+'images_viewed_per_month.png',dpi=300)\n",
+    "plt.savefig(EXPORTDIR+'images_viewed_per_month.pdf')\n",
     "plt.show()"
    ],
    "metadata": {
